# system-labs

./: .gitignore  CMakeLists.txt  LICENSE  lab1.cpp  lab2.cpp  lab3.cpp  lab4.cpp  lab5.cpp
.github/workflows/: build_cmake.yml
common/: utils.h
lab1/: base.h  callocator.h  doublylinked.h  interfaces.h
lab2/: addresstranslator.h  allocator.h  containers.h  pagedescriptor.h  pagemanager.h  pages.h
lab3/: graphs.h  gui.h  gui.ui  simulator.h  task.h
lab4/: mainwindow.h  mainwindow.ui  simulator.cpp
